change the parent class of CommentList from LinkedList to ArrayList because of performance